# django-perm-trans

./: .gitignore  LICENSE.md  README.md  pyproject.toml
django_perm_trans/: apps.py  exceptions.py  functions.py
